--- a/main.html
+++ b/main.html
@@ -11,6 +11,36 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<table>
+		<thead>
+			<tr>
+				<th>Roll numbers</th>
+				<th>Names</th>
+				
+			</tr>
+			
+			
+		</thead>	
+		<tbody>
+			<tr>
+				<td>1</td>
+				<td>Ram</td>
+			</tr>
+			
+			<tr>
+				<td>2</td>
+				<td>Hanuman</td>
+			</tr>
+		
+		</tbody>
+			
+	</table>
+	<ol>
+		<li> <img src="https://picsum.photos/id/123/200/300" alt="Image Loading" </li>
+		<li> <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" alt="Video loading" controls width="500" hight="100" </li></video>
+		<li> <audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" alt="LOading" controls></audio> </li>
+	</ol>
+
 </body>
 
 </html>
