--- a/main.html
+++ b/main.html
@@ -26,9 +26,14 @@
 				<td>1</td>
 				<td>Ram</td>
 			</tr>
-			
+
 			<tr>
 				<td>2</td>
+				<td>Lakshman</td>
+			</tr>
+		
+			<tr>
+				<td>3</td>
 				<td>Hanuman</td>
 			</tr>
 		
@@ -37,8 +42,18 @@
 	</table>
 	<ol>
 		<li> <img src="https://picsum.photos/id/123/200/300" alt="Image Loading" </li>
-		<li> <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" alt="Video loading" controls width="500" hight="100" </li></video>
-		<li> <audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" alt="LOading" controls></audio> </li>
+		<li> 
+			<video controls width="500" height="500">
+			<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" alt="Video loading" type="mp4">
+		    
+			</video> 
+		</li>
+		<li>
+			<audio controls>
+  <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+		</li>
 	</ol>
 
 </body>
