--- a/main.html
+++ b/main.html
@@ -39,7 +39,8 @@
 		
 		</tbody>
 			
-	</table>
+	</table><br>
+	<h1>List of medias</h1>
 	<ol>
 		<li> <img src="https://picsum.photos/id/123/200/300" alt="Image Loading" </li>
 		<li> 
