--- a/main.html
+++ b/main.html
@@ -44,16 +44,16 @@
 	<ol>
 		<li> <img src="https://picsum.photos/id/123/200/300" alt="Image Loading" </li>
 		<li> 
-			<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" alt="Video loading" type="mp4" controls width="500" height="500">
-			
-		    <p>Your browser does not support the audio element.</p>
+			<video controls width="500" height="500">
+			<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" alt="Video loading" type="mp4">
+		    
 			</video> 
 		</li>
 		<li>
-			<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/mpeg" controls>
-
-			  Your browser does not support the audio element.
-		</audio>
+			<audio controls>
+  <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
 		</li>
 	</ol>
 
