--- a/main.html
+++ b/main.html
@@ -42,7 +42,9 @@
 	</table><br>
 	<h1>List of medias</h1>
 	<ol>
-		<li> <img src="https://picsum.photos/id/123/200/300" alt="Image Loading" </li>
+		<li> <img src="https://picsum.photos/id/123/200/300" alt="Image Loading"> 
+		</li>
+
 		<li> 
 			<video controls width="500" height="500">
 			<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" alt="Video loading" type="mp4">
