--- a/main.html
+++ b/main.html
@@ -52,8 +52,7 @@
 			</video> 
 		</li>
 		<li>
-			<audio controls>
-  <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/mpeg">
+	<audio controls src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
 		</li>
